--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "url": "egoist/rollup-plugin-hashbang",
     "type": "git"
   },
-  "main": "index.js",
-  "files": [
-    "index.js"
-  ],
+  "main": "dist/index.cjs.js",
+  "files": ["dist"],
   "scripts": {
     "test": "npm run lint && jest",
-    "lint": "xo"
+    "lint": "xo",
+    "build": "bili",
+    "prepublishOnly": "npm run build"
   },
   "author": "egoist <0x142857@gmail.com>",
   "license": "MIT",
