--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "test": "npm run lint && jest",
     "lint": "xo",
-    "build": "bili",
+    "build": "rollup -c",
     "prepublishOnly": "npm run build"
   },
   "author": "egoist <0x142857@gmail.com>",
@@ -27,7 +27,6 @@
   "devDependencies": {
     "babel-jest": "^22.0.4",
     "babel-preset-env": "^1.6.1",
-    "bili": "^1.2.7",
     "eslint-config-rem": "^3.0.0",
     "executable": "^4.1.0",
     "fs-extra": "^5.0.0",
@@ -45,5 +44,8 @@
     "presets": [
       "env"
     ]
+  },
+  "engines": {
+    "node": ">=8"
   }
 }
