--- a/package.json
+++ b/package.json
@@ -11,50 +11,29 @@
     "dist"
   ],
   "scripts": {
-    "test": "npm run lint && jest",
-    "lint": "xo",
-    "build": "bili",
+    "test": "vitest run",
+    "build": "tsup src/index.ts --dts",
     "prepublishOnly": "npm run build"
   },
   "author": "egoist <0x142857@gmail.com>",
   "license": "MIT",
-  "jest": {
-    "testEnvironment": "node"
-  },
   "dependencies": {
-    "magic-string": "^0.22.4"
+    "magic-string": "^0.25.7"
   },
   "devDependencies": {
-    "babel-jest": "^22.0.4",
-    "babel-preset-env": "^1.6.1",
-    "bili": "^4.2.4",
-    "eslint-config-rem": "^3.0.0",
-    "executable": "^4.1.0",
-    "fs-extra": "^5.0.0",
-    "jest": "^22.0.4",
-    "rollup": "^1.1.2",
-    "xo": "^0.18.0"
+    "@types/fs-extra": "^9.0.13",
+    "executable": "^4.1.1",
+    "fs-extra": "^10.0.0",
+    "kanpai": "^0.10.1",
+    "rollup": "^2.63.0",
+    "tsup": "^5.11.11",
+    "typescript": "^4.5.4",
+    "vitest": "^0.0.139"
   },
-  "xo": {
-    "extends": "rem",
-    "envs": [
-      "jest"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "env"
-    ]
+  "peerDependencies": {
+    "rollup": ">=2"
   },
   "engines": {
-    "node": ">=6"
-  },
-  "browserslist": [
-    "node 6"
-  ],
-  "bili": {
-    "babel": {
-      "babelrc": false
-    }
+    "node": ">=14"
   }
 }
